[package]
name = "oracle_cli"
version = "0.1.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256kfun = "0.2"
structopt = "0.3"
sha2 = "0.9"


[dev-dependencies]
schnorr_fun = "0.2"
